# ghoo

./: .gitignore  BREAKING_CHANGES.md  CLAUDE.md  DOCUMENTATION_STRATEGY.md  E2E_TESTING_CHECKLIST.md  E2E_TESTING_RESULTS.md  E2E_TEST_VALIDATION_REPORT.md  GRAPHQL_IMPLEMENTATION_STRATEGY.md  HYBRID_APPROACH_UPDATES.md  README.md  REST_VS_GRAPHQL_ANALYSIS.md  SPEC.md  TECHNICAL_DEBT_ANALYSIS.md  agent-workflow.md  bootstrap-mvp-workflow.md  ghoo.yaml  heapster-test-ghoo.yaml  pyproject.toml  pytest.ini  spec.md  subagents.md  test_graphql_libraries.py  test_pygithub_capabilities.py  workflow.md
.claude/agents/: deep-problem-solver.md  docs-maintainer.md  issue-executor.md  issue-planner.md
.github/workflows/: dependency-check.yml  test.yml
agents/: git-commit-manager.md  subtask-plan-checker.md  subtask-planner.md  subtask-submit-work.md  task-plan-checker.md  task-planner.md  task-submit-work.md
config/: ci-environment.yml
docs/: ISSUE_TYPES_SETUP.md  QUICK_TEST_SETUP.md  TEST_ENVIRONMENT_SETUP.md
docs/development/: README.md  api-reference.md  architecture.md  graphql-client-architecture.md  testing.md
docs/research/: README.md  code-quality-evaluation.md  graphql-implementation-strategy.md  hybrid-approach-updates.md  pygithub-graphql-findings.md  rest-vs-graphql-analysis.md  system-design-evaluation.md
docs/user-guide/: README.md  commands.md  configuration.md  getting-started.md  workflow.md
new-agents/: git-commit.md  subtask-plan-checker.md  subtask-planner.md  subtask-submit-work.md  task-plan-checker.md  task-planner.md  task-submit-work.md
scripts/: diagnose_environment.py  run_tests.py  setup_test_env.py  verify_spec_compliance.py
src/ghoo/: __init__.py  core.py  exceptions.py  (+2 more)
tests/: SPEC_COMPLIANCE_TESTING.md  TEST_EXECUTION.md  cli_executor.py  conftest.py  dependency_manager.py  environment.py  execution_framework.py  module_resolver.py  test_discovery.py  test_execution_consistency.py  test_modes.py  test_reporter.py  test_spec_compliance_runner.py  test_utils.py
(+109 files in other folders)
