[project]
name = "ghoo"
version = "0.1.0"
description = "A prescriptive CLI tool for GitHub repository and project management"
readme = "README.md"
authors = [
    { name = "Justyn Butler", email = "commits@justyn.co" }
]
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1.6",
    "pygithub>=2.7.0",
    "pyyaml>=6.0.2",
    "requests>=2.31.0",
    "typer>=0.16.0",
]

[project.scripts]
ghoo = "ghoo.main:main"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-httpx>=0.35.0",
]
