[project]
name = "ghoo"
version = "0.1.24"
description = "A prescriptive CLI tool for GitHub repository and project management"
readme = "README.md"
authors = [
    { name = "Justyn Butler", email = "commits@justyn.co" }
]
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1.6",
    "markdown-it-py>=3.0.0",
    "pygithub>=2.7.0",
    "pyyaml>=6.0.2",
    "requests>=2.31.0",
    "typer>=0.16.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
ghoo = "ghoo.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-httpx>=0.35.0",
    "python-dotenv>=1.0.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = "-v --tb=short"
markers = [
    "unit: Unit test",
    "integration: Integration test", 
    "e2e: End-to-end test",
    "live_only: Test requires live GitHub API",
    "mock_only: Test should only run in mock mode",
    "both_modes: Test can run in both live and mock modes",
    "slow: Slow test",
    "fast: Fast test", 
    "simple: Simple test",
    "complex: Complex test",
    "requires_network: Test requires network access",
    "requires_credentials: Test requires credentials",
]
